mdapipkg/objects/Case.object
<CustomObject>
    <businessProcesses>
        <fullName>Case Process</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Deleted</fullName>
        </values>
        <values>
            <fullName>Escalated</fullName>
        </values>
        <values>
            <fullName>In Progress</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Open</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Pending QA</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>M2MX</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Deleted</fullName>
        </values>
        <values>
            <fullName>Escalated</fullName>
        </values>
        <values>
            <fullName>In Progress</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Open</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Pending QA</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Case_Comments__c</fullName>
        <description>This is only for migrated historical data that came from one text area field. Going forward you will use Case Comments.</description>
        <label>Case Comments (Historical)</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Case_Resolution_Comment__c</fullName>
        <description>This is only for migrated History. Going forward standard Salesforce functionality will be used.</description>
        <label>Case Resolution Comment (Historical)</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Case_Type_Historical__c</fullName>
        <label>Case Type (Historical)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>3rd Party Verification</fullName>
                </value>
                <value>
                    <fullName>Letter of Good Standing</fullName>
                </value>
                <value>
                    <fullName>Lifetime Membership</fullName>
                </value>
                <value>
                    <fullName>Member Selects &apos;Other&apos; for Title Held</fullName>
                </value>
                <value>
                    <fullName>Membership Reinstatement</fullName>
                </value>
                <value>
                    <fullName>Membership Resign</fullName>
                </value>
                <value>
                    <fullName>Network Resign</fullName>
                </value>
                <value>
                    <fullName>Registration Cancellation</fullName>
                </value>
                <value>
                    <fullName>Registration Transfer to Another Event</fullName>
                </value>
                <value>
                    <fullName>Registration Transfer to Another Member</fullName>
                </value>
                <value>
                    <fullName>Request Grace</fullName>
                </value>
                <value>
                    <fullName>Submission of Service Request/Activities</fullName>
                </value>
                <value>
                    <fullName>Update Qualifying Company Information</fullName>
                </value>
                <value>
                    <fullName>YPO Gold Lifetime Membership</fullName>
                </value>
                <value>
                    <fullName>WPO Lifetime Membership</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Type__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Data</fullName>
                </value>
                <value>
                    <fullName>Defect</fullName>
                </value>
                <value>
                    <fullName>Change Request</fullName>
                </value>
                <value>
                    <fullName>General</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EngineeringReqNumber__c</fullName>
        <label>Engineering Req Number</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GUID__c</fullName>
        <externalId>true</externalId>
        <label>GUID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Grace_Waiver__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Grace/Waiver?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>M2MX_Requestor_Name__c</fullName>
        <label>M2MX Requestor Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NVMContactWorld__EmailSentTo__c</fullName>
        <label>EmailSentTo</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NVMContactWorld__NVMAccountOverride__c</fullName>
        <label>NVMAccountOverride</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NVMContactWorld__NVMCaseOrigin__c</fullName>
        <description>The content of this field is presented on the contact pad when a case is assigned to an agent. For example: Email</description>
        <inlineHelpText>The content of this field is presented on the contact pad when a case is assigned to an agent. For example: Email</inlineHelpText>
        <label>NVM Case Origin</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NVMContactWorld__NVMNodeOverride__c</fullName>
        <description>Used to override the NewVoiceMedia node a case routing request is sent to</description>
        <inlineHelpText>Used to override the NewVoiceMedia node a case routing request is sent to</inlineHelpText>
        <label>NVMNodeOverride</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NVMContactWorld__NVMOverrideCaseOwnerTimeoutLoggedIn__c</fullName>
        <description>Override: how long to try to route replies to the case owner, when they are logged in</description>
        <inlineHelpText>Override: how long to try to route replies to the case owner, when they are logged in</inlineHelpText>
        <label>NVMOverrideCaseOwnerTimeoutLoggedIn</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NVMContactWorld__NVMOverrideCaseOwnerTimeoutLoggedOut__c</fullName>
        <description>Override: how long to try to route replies to the case owner, when they are logged out</description>
        <inlineHelpText>Override: how long to try to route replies to the case owner, when they are logged out</inlineHelpText>
        <label>NVMOverrideCaseOwnerTimeoutLoggedOut</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NVMContactWorld__NVMRoutable__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used to determine whether a case should be routed to an agent via NVM</description>
        <inlineHelpText>Used to determine whether a case should be routed to an agent via NVM</inlineHelpText>
        <label>NVMRoutable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NVMContactWorld__RoutePlanIdentifier__c</fullName>
        <label>RoutePlanIdentifier</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NVMContactWorld__Skills__c</fullName>
        <label>Skills</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PotentialLiability__c</fullName>
        <label>Potential Liability</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SLAViolation__c</fullName>
        <label>SLA Violation</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status_Reason__c</fullName>
        <label>Status Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Problem Solved</fullName>
                </value>
                <value>
                    <fullName>Request Cancelled/Closed w/o Decision</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Escalate</fullName>
                </value>
                <value>
                    <fullName>Waiting for Details</fullName>
                </value>
                <value>
                    <fullName>On Hold</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>Researching</fullName>
                </value>
                <value>
                    <fullName>Request Approved / Complete</fullName>
                </value>
                <value>
                    <fullName>Request Denied by YPO-YPO Gold</fullName>
                </value>
                <value>
                    <fullName>Request Denied by YPO-WPO</fullName>
                </value>
                <value>
                    <fullName>Request Cancelled / Closed w/o Decision</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Traffic_Lights__c</fullName>
        <formula>IMAGE( 
CASE(Status, 
&quot;New&quot;, &quot;/img/samples/light_green.gif&quot;,
&quot;Working&quot;, &quot;/img/samples/light_yellow.gif&quot;,
&quot;Escalated&quot;, &quot;/img/samples/light_red.gif&quot;, 
&quot;/s.gif&quot;), 
&quot;status color&quot;)</formula>
        <label>Traffic Lights</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Chapter - Events</fullName>
                </value>
                <value>
                    <fullName>Chapter - Chapter Admin</fullName>
                </value>
                <value>
                    <fullName>Chapter - Chapter Health Data</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Validation_Check__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Validation Check</label>
        <type>Checkbox</type>
    </fields>
    <listViews>
        <fullName>AllOpenCases</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>All Open Cases</label>
    </listViews>
    <listViews>
        <fullName>All_Member_Services_Cases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.TYPE</field>
            <operation>equals</operation>
            <value>Member Services</value>
        </filters>
        <label>All Member Services Cases</label>
    </listViews>
    <listViews>
        <fullName>Events_Queue_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>Events Queue</label>
        <queue>Events_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Exchange_Queue_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>Exchange Queue</label>
        <queue>Exchange_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>GLC_Queue_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>GLC Queue</label>
        <queue>GLC_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>General_Queue_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>General Queue</label>
        <queue>General_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Help_Desk_Queue_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>Help Desk Queue</label>
        <queue>Help_Desk_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>IT_Queue_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>IT Queue</label>
        <queue>IT_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>M2MX_Queue_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>M2MX Queue</label>
        <queue>M2MX_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Membership_Development_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>Membership Development</label>
        <queue>Membership_Development</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Membership_Development_GR_Case</fullName>
        <columns>NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <filterScope>Queue</filterScope>
        <label>Membership Development - Globalringers</label>
        <queue>Membership_Development</queue>
    </listViews>
    <listViews>
        <fullName>Membership_Services_Queue_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>Member Services Queue</label>
        <queue>Member_Services_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MyCases</fullName>
        <filterScope>Mine</filterScope>
        <label>My Cases</label>
    </listViews>
    <listViews>
        <fullName>MyOpenCases</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>My Open Cases</label>
    </listViews>
    <recordTypes>
        <fullName>Case_Process</fullName>
        <active>true</active>
        <businessProcess>Case Process</businessProcess>
        <label>Case Process</label>
    </recordTypes>
    <recordTypes>
        <fullName>M2MX</fullName>
        <active>true</active>
        <businessProcess>M2MX</businessProcess>
        <label>M2MX</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>